--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="reset">
                     <button id="open" class="btn btn-primary">Abrir</button>
-                    <button id="reset" class="btn btn-secondary">Reset</button>
+                    <button id="reset" class="btn btn-secondary">Cerrar</button>
                 </div>
             </div>
         </div>
@@ -45,18 +45,18 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content" style="background-color: #f9e6ea;">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel" style="color: #d91e18;">¡Felices 9 meses, mi osita!
+                    <h5 class="modal-title" id="exampleModalLabel" style="color: #392259;">¡Felices 9 meses, mi osita!
                         🎉🐻</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p style="color: #000;">Parece que fue ayer que nos conocimos y ya han pasado 9 meses
+                    <p style="color: #392259;">Parece que fue ayer que nos conocimos y ya han pasado 9 meses
                         llenos de muchas aventuras, amor y felicidad. Desde el primer momento en que te vi, supe que
                         eras alguien especial. Tu sonrisa iluminó mi mundo y despertó emociones en mí que nunca antes
                         había experimentado antes. Cada vez que estamos juntos, mi corazón late y late con mucha fuerza.
                         💜💫</p>
 
-                    <p style="color: #000;">Eres mi mejor amiga, mi confidente, mi amante y mi compañera de vida y de
+                    <p style="color: #392259;">Eres mi mejor amiga, mi confidente, mi amante y mi compañera de vida y de
                         aventuras. A tu lado me
                         siento completo, feliz y puedo ser yo mismo. Me encanta tu sonrisa, tu forma de ser, tu sentido
                         del humor y la forma en que me haces sentir. 😊💑 Estos 9 meses han sido un viaje maravilloso.
@@ -64,14 +64,14 @@
                         superado obstáculos juntos y nos hemos apoyado mutuamente en los momentos difíciles. Cada día
                         que pasa me enamoro más de ti y me siento más afortunado de tenerte a mi lado. 💜🌟</p>
 
-                    <p style="color: #000;">Te amo más que a las palabras pueden expresar. Eres mi presente y mi futuro,
+                    <p style="color: #392259;">Te amo más que a las palabras pueden expresar. Eres mi presente y mi futuro,
                         la persona con la
                         que quiero compartir el resto de mi vida. No puedo esperar a celebrar muchos más aniversarios
                         juntos, seguir creando recuerdos increíbles y construir un futuro lleno de amor y felicidad.
                         🌈💜</p>
 
-                    <p style="color: #000;">Para mí, eres:</p>
-                    <ul style="color: #000;">
+                    <p style="color: #392259;">Para mí, eres:</p>
+                    <ul style="color: #392259;">
                         <li>🌞 El sol que ilumina mis días.</li>
                         <li>🌙 La luna que me guía en las noches oscuras.</li>
                         <li>✨ Las estrellas que me inspiran a soñar.</li>
@@ -81,18 +81,18 @@
                         <li>🌍 La tierra que me sostiene.</li>
                     </ul>
 
-                    <p style="color: #000;">Desde el primer día en que nuestros caminos se cruzaron, supe que estábamos
+                    <p style="color: #392259;">Desde el primer día en que nuestros caminos se cruzaron, supe que estábamos
                         destinados a vivir y
                         por eso te esperé y te esperé para vivir esta hermosa historia juntos. Tu sonrisa ilumina mi
                         mundo y tus ojitos me guían por el camino de la felicidad. 😍✨</p>
 
-                    <p style="color: #000;">En este día especial, quiero agradecerte por ser la protagonista de mi
+                    <p style="color: #392259;">En este día especial, quiero agradecerte por ser la protagonista de mi
                         historia, por llenar cada
                         página de mi vida con tu amor incondicional y tu belleza única. Prometo seguir escribiendo
                         juntos nuestra historia de amor, con cada palabra escrita con el tinte de la pasión y el
                         compromiso. 💜📝</p>
                 
-                        <h1 class="text-center">TE AMO</h1>
+                        <h1 class="text-center" style="color: #392259;">TE AMO</h1>
               
                 </div>
             </div>
